Fix z-index in room view.

--- a/client/src/Room/room.scss
+++ b/client/src/Room/room.scss
@@ -12,6 +12,7 @@
   grid-row: 1;
   background: #d2691eaa;
   padding: 2rem;
+  z-index: 10;
 }
 
 .chat-history-container {
@@ -20,6 +21,7 @@
   overflow: auto;
   background: #7fffd4aa;
   padding: 2rem;
+  z-index: 10;
 }
 
 .chat-message-container {
@@ -27,6 +29,7 @@
   grid-row: 5;
   background: #deb887aa;
   padding: 2rem;
+  z-index: 10;
 }
 
 .room-control {
@@ -34,6 +37,7 @@
   grid-row: 2;
   background: #ffd700aa;
   padding: 2rem;
+  z-index: 10;
 }
 
 .attendees-container {
@@ -43,6 +47,7 @@
   background: #9400d3aa;
   padding: 2rem;
   white-space: nowrap;
+  z-index: 10;
 
   #attendees {
     li {
@@ -58,7 +63,6 @@
   background: #6495ed;
   height: 100%;
   width: 100%;
-
   video {
     height: 100%;
     width: 100%;
@@ -72,7 +76,6 @@
   background: #adff2f;
   height: 100%;
   width: 100%;
-
   video {
     height: 100%;
     width: 100%;
@@ -84,6 +87,8 @@
   grid-row: 5;
   background: #8fbc8faa;
   padding: 2rem;
+  z-index: 10;
+
   #video-controls {
     .video-control {
       cursor: pointer;
